manifests/ingress-9.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "anchauhakscluster"
    labels:
        app: "anchauhakscluster"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: anchauhakscluster1c09-anchauhakscluster.aed3abac9ea0469f8e1f.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "anchauhakscluster"
                servicePort: 80
